# libteste

./: CMakeLists.txt  README.md  project.ti
includes/: teste.hpp
src/: teste.cpp
